--- a/HTML-and-the-web/html-and-the-web_div-salad/index.html
+++ b/HTML-and-the-web/html-and-the-web_div-salad/index.html
@@ -12,61 +12,59 @@ Let’s fix this mess!
     <title>HTML Basics Excercise</title>
     <meta charset="UTF-8" />
   </head>
-  <!-- Someone forgot to wrap the content of our webpage with an HTML element,
-	which one was it again? -->
-  <div>
-    <div>
-      <div>Jane Doe</div>
+  <body>
+    <header>
+      <h1>Jane Doe</h1>
       <!-- Which elements could be used to link to parts of the webpage,
 		which appear below? -->
-      <div id="nav">
-        <div>About Me</div>
-        <div>Contact</div>
-        <div>Skillset</div>
-      </div>
-    </div>
+      <nav id="nav">
+        <a href="#">About you</a>
+        <a href="#">Contact</a>
+        <a href="#">Skillset</a>
+      </nav>
+    </header>
     <!-- Looks like the following part is the central content of our webpage. -->
-    <div>
-      <div id="about-me">
-        <div>About me</div>
-        <div>
+    <main>
+      <article id="about-me">
+        <h1>About me</h1>
+        <p>
           Hi there! Welcome to my personal website. Here is gathered the most
           important information about me. If you want to work with me or get to
           know me, please don't hesitate to get in contact.
-        </div>
+        </p>
         <!-- What element could be used to combine an image with a descriptive caption? -->
-        <div>
+        <figure>
           <img
             src="https://source.unsplash.com/random/400x300?fruit"
             alt="a random picture"
           />
-          <div>
+          <figcaption>
             A random picture, because I would like to maintain my privacy and
             let my code speak for me, instead of images.
-          </div>
-        </div>
-      </div>
+          </figcaption>
+        </figure>
+      </article>
 
-      <div id="contact">
-        <div>Contact</div>
+      <article id="contact">
+        <h2>Contact</h2>
         <!-- When clicking on these element, nothing happens! But I want to be redirected to the other websites. Why is it not working? -->
-        <div href="https://github.com">GitHub</div>
-        <div href="https://de.linkedin.com/">LinkedIn</div>
-        <div href="https://codesandbox.io/">CodeSandbox</div>
-      </div>
+        <a href="https://github.com">GitHub</a>
+        <a href="https://de.linkedin.com/">LinkedIn</a>
+        <a href="https://codesandbox.io/">CodeSandbox</a>
+      </article>
 
-      <div id="skills">
-        <div>Skillset</div>
+      <article id="skills">
+        <h2>Skillset</h2>
         <!-- This part could use some bulletpoint to be more structured. -->
-        <div>
-          <div>HTML</div>
-          <div>CSS</div>
-          <div>JavaScript</div>
-          <div>React</div>
-          <div>Painting rainbows</div>
-          <div>Party</div>
-        </div>
-      </div>
-    </div>
-  </div>
+        <ol>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Painting rainbows</li>
+          <li>Party</li>
+        </ol>
+      </article>
+    </main>
+  </body>
 </html>
